--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
       uses: actions/upload-pages-artifact@v2
       with:
         # Upload entire repository
-        path: 'src/BlazorHeightmaps.Wasm.App/bin\Release/net7.0/publish/wwwroot'
+        path: './src/BlazorHeightmaps.Wasm.App/bin/Release/net7.0/publish/wwwroot'
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
