Tailwind should now be generated on the server as well

--- a/src/BlazorHeightmaps.Wasm.App/BlazorHeightmaps.Wasm.App.csproj
+++ b/src/BlazorHeightmaps.Wasm.App/BlazorHeightmaps.Wasm.App.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.9" PrivateAssets="all" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="cd $(SolutionDir)&#xD;&#xA;powershell -NoProfile -ExecutionPolicy RemoteSigned -file &quot;post-build.ps1&quot;" />
+  </Target>
+
 </Project>
