--- a/src/BlazorHeightmaps.Wasm.App/BlazorHeightmaps.Wasm.App.csproj
+++ b/src/BlazorHeightmaps.Wasm.App/BlazorHeightmaps.Wasm.App.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.9" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\" />
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="cd $(SolutionDir)&#xD;&#xA;powershell -NoProfile -ExecutionPolicy RemoteSigned -file &quot;post-build.ps1&quot;" />
   </Target>
