Use dotnet watch for hot reload and tailwind build

--- a/src/BlazorHeightmaps.Wasm.App/BlazorHeightmaps.Wasm.App.csproj
+++ b/src/BlazorHeightmaps.Wasm.App/BlazorHeightmaps.Wasm.App.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="cd $(SolutionDir)&#xD;&#xA;powershell -NoProfile -ExecutionPolicy RemoteSigned -file &quot;post-build.ps1&quot;" />
+    <Exec Command="cd ..\..&#xD;&#xA;powershell -NoProfile -ExecutionPolicy RemoteSigned -file &quot;post-build.ps1&quot;" />
   </Target>
 
 </Project>
