--- a/src/Ambacht.Common/Ambacht.Common.csproj
+++ b/src/Ambacht.Common/Ambacht.Common.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 		<PackageReference Include="CaseExtensions" Version="1.1.0" />
+		<PackageReference Include="SharpZipLib" Version="1.4.2" />
 	</ItemGroup>
 
 
