--- a/src/BlazorHeightmaps.Wasm.App/BlazorHeightmaps.Wasm.App.csproj
+++ b/src/BlazorHeightmaps.Wasm.App/BlazorHeightmaps.Wasm.App.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\Ambacht.Common.Blazor\Ambacht.Common.Blazor.csproj" />
     <ProjectReference Include="..\Ambacht.Common.Maps\Ambacht.Common.Maps.csproj" />
     <ProjectReference Include="..\Ambacht.Common\Ambacht.Common.csproj" />
+    <ProjectReference Include="..\BlazorHeightmaps\BlazorHeightmaps.csproj" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
