--- a/src/Ambacht.Common.Blazor/Ambacht.Common.Blazor.csproj
+++ b/src/Ambacht.Common.Blazor/Ambacht.Common.Blazor.csproj
@@ -11,7 +11,8 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.11" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.10" />
+		<PackageReference Include="MudBlazor" Version="6.7.0" />
 	</ItemGroup>
 
 
